--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
         # Friendly description to be shown in the UI instead of 'name'
         description: 'version to build'
         # Default value if no value is explicitly provided
-        default: '0.6.0'
+        default: '0.6.1'
         # Input has to be provided for the workflow to run
         required: true
 
@@ -43,7 +43,7 @@ jobs:
       
       - name: Build the binary
         run: sudo ./build-docker.sh -c config_rak
-#        run: sudo ./build.sh -c config_rak
+        #run: sudo ./build.sh -c config_rak
         
       - name: Create Github release
         id: create-new-release
@@ -67,7 +67,7 @@ jobs:
         with:
          upload_url: ${{ steps.create-new-release.outputs.upload_url }}
          asset_path: ${{ steps.find-zip-path.outputs.asset_path }}
-         asset_name: rakpios-armhf-${{ github.event.inputs.name }}.zip
+         asset_name: rakpios-arm64-${{ github.event.inputs.name }}.zip
          asset_content_type: application/zip
          
         
